--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         alt = "austin carey profile picture"
         width="170" height="170">
         <h2>Austin M. Carey</h2>
-        <p><em>Planning Analyst at Central Arizona Project</em></p>
+        <p><em>Planning Analyst II at Central Arizona Project</em></p>
         <P> Water resources professional that utilizes data analysis and visualizations to inform policy and decision making. <br>
             I love spending time outdoors, drinking coffee, hanging with my wife and daughter and hiking with my yellow lab "Moose" </P>
 
