--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Austin M. Carey - CV</title>
 </head>
-
 <body>
-        <img src = "ProfilePictureCropped.png"
-        alt = "austin carey profile picture"
-        width="170" height="170">
-        <h2>Austin M. Carey</h2>
-        <p><em>Planning Analyst II at Central Arizona Project</em></p>
+    <table cellspacing = "20">
+        <tr>
+            <td>
+                <img src = "ProfilePictureCropped.png"
+                alt = "austin carey profile picture"
+                width="170" height="170"> 
+            </td>
+            <td>
+                <h2 style="margin-top:-10px">Austin M. Carey</h2>
+                <p><em>Planning Analyst II at Central Arizona Project</em></p>
+                <a href="https://www.linkedin.com/in/austin-carey-28a2914b/">LinkedIn</a><br>
+                <a href="https://scholar.google.com/citations?user=cuge6ggAAAAJ&hl=en">Google Scholar</a><br>
+                <a href="contact.html">Contact Me</a><br>
+            </td>
+        </tr>
+    </table>
         <P> Water resources professional that utilizes data analysis and visualizations to inform policy and decision making. <br>
-            I love spending time outdoors, drinking coffee, hanging with my wife and daughter and hiking with my yellow lab "Moose" </P>
+            I love being outdoors, drinking coffee, spending time with my wife and daughter and hiking with my yellow lab 
+            <a  href = "Moose.jpg">Moose</a></P>
 
         <p>
-            <a href="https://www.linkedin.com/in/austin-carey-28a2914b/">LinkedIn</a><br>
-            <a href="https://scholar.google.com/citations?user=cuge6ggAAAAJ&hl=en">Google Scholar</a>
         </p>
         <hr>
         <h3><strong>Education</strong></h3>
@@ -118,6 +128,16 @@
             <li><p>W. Larkin Fitch Award (2012)<br><em>University of Arizona - College of Agriculture and Life Sciences</em></p></li>
         </ol>
         <hr>
+        <h3><strong>Skills</strong></h3>
+        <h4><u>Professional</u></h4>
+        <p>Presentations<br>Project Management<br>Strong and Positive Work Ethic<br>Management and Supervision<br>Excellent Verbal and Written Communication<br> 
+            Great Interpersonal Skills<br> Works Well Independently and Part of a Team<br>Ability to Work in a Fast-Paced Environment</p>
+        <h4><u>Techncial</u></h4>
+        <p>Data Aquisition and Analysis<br>Data Visualization<br>Technical Report Writing<br>Research</p>
+        <h4><u>Software/Programming</u></h4>
+        <p>ArcGIS (Desktop and Pro)<br>QGIS<br>Microsoft Office Suite<br>Surfer<br>SQL<br>GoldSim<br>R<br>VBA<br>HTML </p>
+        <hr>
         <hr>
     </body>
 </html>
+
