Cleaned up contact me page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             </td>
             <td>
                 <h2 style="margin-top:-10px">Austin M. Carey</h2>
-                <p><em>Planning Analyst II at Central Arizona Project</em></p>
+                <p><strong>Planning Analyst II at Central Arizona Project</strong></p>
+                <p>Phoenix, AZ 85086</p>
                 <a href="https://www.linkedin.com/in/austin-carey-28a2914b/">LinkedIn</a><br>
                 <a href="https://scholar.google.com/citations?user=cuge6ggAAAAJ&hl=en">Google Scholar</a><br>
                 <a href="contact.html">Contact Me</a><br>
